# adeqmath

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: adeqmath.h  defines.h  matrix.h  op.h  scalar.h  scalar_utils.h  vector.h  vector_op.h
src/: matrix.c  op.c  scalar.c  scalar_utils.c  vector.c  vector_op.c
